# Full-Stack-Bootcamp-GenAI

./: README.md  pyproject.toml  requirements.txt
Class-04-05-Apr-OHE-BOW-Wrod2Vec-Intution-with-practical/: encoding.ipynb
full_stack_bootcamp_genai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
